--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KANBAN-Board</title>
+    <title>Join</title>
     <link rel="stylesheet" href="./asssets/css/style.css">
     <link rel="stylesheet" href="./asssets/css/mobile-login.css">
     <script src="script.js"></script>
+    <link rel="icon" type="image/x-icon" href="./asssets/img/mobile-login-logo-dark.svg">
 </head>
 
 <body>
