--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/privacy_policy.css" />
+    <link rel="stylesheet" href="privacy_policy.css" />
     <link rel="stylesheet" href="font.css" />
   </head>
 
