--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <img class="small-logo" src="./img/small-logo.svg" alt="Logo" />
+      <img class="small-logo" src="./img_policy/small-logo.svg" alt="Logo" />
       <button id="create-button">Create &#10003;</button>
     </header>
 
