--- a/help.html
+++ b/help.html
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <img class="small-logo" src="./img/small-logo.svg" alt="Logo" />
+      <img class="small-logo" src="./help_img/small-logo.svg" alt="Logo" />
       <button id="create-button">Create &#10003;</button>
     </header>
 
