add header and footer

--- a/index.html
+++ b/index.html
@@ -8,36 +8,36 @@
     <title>Login</title>
     <link rel="icon" type="image/x-icon" href="./img/mobile-login-logo-dark.svg">
     <link rel="stylesheet" href="asssets/css/mobile-login.css">
+    <link rel="shortcut icon" href="asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
 </head>
 
 <body>
     <div class="main-content">
         <header>
             <div>
-                <img src="./img/mobile-login-logo-dark.svg" alt="">
+                <img src="/asssets/img/mobile-login-logo-dark.svg" alt="">
             </div>
         </header>
 
         <div id="inside-window" class="inside-window">
             <h1>Log in</h1>
-            <img src="./img/line.svg" alt="Trennlinie">
+            <img src="/asssets/img/line.svg" alt="Trennlinie">
             <form action="onsubmit">
                 <div class="input-field">
                     <input class="e-mail" type="email" name="" required placeholder="Email">
-                    <img src="./img/email-icon.svg" alt="e-mail icon">
+                    <img src="/asssets/img/email-icon.svg" alt="e-mail icon">
                 </div>
                 <div class="input-field">
                     <input id="input" class="password" type="password" required placeholder="Password">
                     <div id="lock-icon-container">
-                        <img id="lock-icon" src="./img/lock-icon.svg" alt="lock">
+                        <img id="lock-icon" src="/asssets/img/lock-icon.svg" alt="lock">
                     </div>
                 </div>
                 <div class="wrong-password">Wrong password</div>
                 <a class="forgot" href="#">Forgot my Password</a>
                 <div id="checkbox-container" class="checkbox-container">
                     <div id="checkmark-container">
-                        <img class="checkbox-empty" onclick="checkmarkChecked()" src="img/checkmark_container.svg"
-                            alt="">
+                        <img class="checkbox-empty" onclick="checkmarkChecked()" src="/asssets/img/checkmark_container.svg"alt="">
                     </div>
                     <label>Remember me</label>
                 </div>
