--- a/board.html
+++ b/board.html
@@ -9,9 +9,13 @@
     <link rel="stylesheet" href="board.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="/asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
+    <link rel="stylesheet" href="/asssets/css/header.css">
+    <link rel="stylesheet" href="/asssets/css/footer.css">
     <title>Board</title>
 </head>
-<body>
+<body onload="init()">
+    <div w3-header-include-html="/asssets/templates/header.html"></div>
     <div class="main-div">
 
         <!------------------ Head Section ----------------------->
@@ -90,5 +94,8 @@
 
 
     </div>
+    <footer w3-footer-include-html="/asssets/templates/footer.html"></footer>
+    <script src="header_include.js"></script>
+    <script src="footer_includes.js"></script>
 </body>
 </html>
