--- a/contacts.html
+++ b/contacts.html
@@ -23,13 +23,13 @@
             <div class="letter-frame">
                 <h2>A</h2>
                 <hr>
-                <div class="single-contact-frame">
+                <a href="./single-contact.html" class="single-contact-frame">
                     <span class="contact-logo orange">AM</span>
                     <div class="name-and-email">
                         <span class="name">Anton Mayer</span>
                         <span class="email">antonm@gmail.com</span>
                     </div>
-                </div>
+                </a>
                 <div class="single-contact-frame">
                     <span class="contact-logo purple">AS</span>
                     <div class="name-and-email">
@@ -69,75 +69,6 @@
                         <span class="name">Eva Fischer</span>
                         <span class="email">eva@gmail.com</span>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="content-big-contact">
-        <div class="big-contact-frame">
-            <div class="big-contact-frame-header">
-                <span class="kanban-pmt">Kanban Project Management Tool</span>
-                <div class="h1-back-arrow">
-                    <h1>Contacts</h1>
-                    <img class="back-arrow" src="./asssets/img/arrow-left-line.svg" alt="back arrow">
-                </div>
-                <h3 class="better-with-a-team">Better with a team</h3>
-            </div>
-            <hr class="hr-blue-small-left">
-            <div class="name-add-task-logo">
-                <span class="contact-logo-big orange">AM</span>
-                <div class="name-add-task">
-                    <span class="big-name">Anton Mayer</span>
-                    <span class="email">+ Add Task</span>
-                </div>
-            </div>
-            <h3 class="contact-information">Contact Information</h3>
-            <div class="email-data">
-                <span class="email-head">Email</span>
-                <span class="email-adress-blue">antom@gmail.com</span>
-            </div>
-            <div class="mobile-data">
-                <span class="mobile-head">Mobil</span>
-                <span class="mobile-number-blue">+49 1111 111 11 1</span>
-            </div>
-            <div class="delet-edit-frame">
-                <img class="bin" src="./asssets/img/delete-bin.svg" alt="delete bin">
-                <img class="pen" src="./asssets/img/edit.svg" alt="edit pen">
-            </div>
-        </div>
-    </div>
-    <div class="edit-contact d-none">
-        <div class="edit-contact-frame">
-            <div class="edit-contact-head">
-                <img class="close-x" src="./asssets/img/close-x.svg" alt="close x-icon">
-                <h1 class="white">Edit Contact</h1>
-                <hr class="hr-blue-small-left">
-                <span class="contact-logo-bigger light-orange">TW</span>
-            </div>
-            <div class="edit-contact-bottom">
-                <form action="">
-                    <div class="input-field-top">
-                        <textarea class="name-displayed" name="name" id="name-displayed" cols="50"
-                            rows="10">Tatjana Wolf</textarea>
-                        <input class="name-input d-none" type="name" required placeholder="Name">
-                        <img src="./asssets/img/name-head.svg" alt="name icon">
-                    </div>
-                    <div class="input-field">
-                        <textarea class="email-displayed" name="name" id="email-deisplayed" cols="50"
-                            rows="10">wolf@gmail.com</textarea>
-                        <input class="email-input d-none" type="email" placeholder="Email">
-                        <img src="./asssets/img/email-icon.svg" alt="email icon">
-                    </div>
-                    <div class="input-field">
-                        <textarea class="phone-displayed" name="name" id="phone-deisplayed" cols="50"
-                            rows="10">+49 2222 222 22 2</textarea>
-                        <input class="tel-input d-none" type="tel" placeholder="Phone">
-                        <img src="./asssets/img/tel.svg" alt="name icon">
-                    </div>
-                </form>
-                <div class="delete-save">
-                    <div class="delete">Delete</div>
-                    <div class="save">Save</div>
                 </div>
             </div>
         </div>
