--- a/add_task.html
+++ b/add_task.html
@@ -5,11 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="font.css" />
   <link rel="stylesheet" href="/asssets/css/header.css">
   <link rel="shortcut icon" href="/asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
   <link rel="stylesheet" href="/asssets/css/footer.css">
+  <link rel="stylesheet" href="./asssets/css/add_task.css">
 </head>
 
 <body onload="init()">
@@ -85,15 +84,15 @@
           <div id="prio-buttons">
             <div class="prio-button">
               <span>Urgent</span>
-              <img src="./add_task_img/Prio alta.svg alta.svg" alt="" />
+              <img src="./add_task_img/Prio alta.svg" alt="" />
             </div>
             <div class="prio-button">
               <span>Medium</span>
-              <img src="./add_task_img/Prio media.svg media.svg" alt="" />
+              <img src="./add_task_img/Prio media.svg" alt="" />
             </div>
             <div class="prio-button">
               <span>low</span>
-              <img src="./add_task_img/Prio baja.svg baja.svg" alt="" />
+              <img src="./add_task_img/Prio baja.svg" alt="" />
             </div>
           </div>
 
@@ -115,6 +114,6 @@
   <footer w3-footer-include-html="/asssets/templates/footer.html"></footer>
   <script src="header_include.js"></script>
   <script src="footer_includes.js"></script>
-  <script src="add_task.js"></script>
+  <script src="./js/add_task.js"></script>
 </body>
 </html>
