mobile contact ready

--- a/single-contact.html
+++ b/single-contact.html
@@ -47,10 +47,12 @@
             </div>
         </div>
     </div>
-    <div class="edit-contact">
+    <div class="edit-contact d-none">
         <div class="edit-contact-frame">
             <div class="edit-contact-head">
-                <img class="close-x" src="./asssets/img/close-x.svg" alt="close x-icon">
+                <div class="x-container">
+                    <img class="close-x" src="./asssets/img/close-x.svg" alt="close x-icon">
+                </div>
                 <h1 class="white">Edit Contact</h1>
                 <hr class="hr-blue-small-left">
                 <span class="contact-logo-bigger light-orange">TW</span>
@@ -83,42 +85,7 @@
             </div>
         </div>
     </div>
-    <!-- <div class="add-contact">
-        <div class="edit-contact-frame">
-            <div class="edit-contact-head">
-                <img class="close-x" src="./asssets/img/close-x.svg" alt="close x-icon">
-                <h1 class="white">Add Contact</h1>
-                <span class="tasks-are-better white">Tasks are better with a team</span>
-                <hr class="hr-blue-small-left">
-                <span class="contact-logo-template gray">
-                    <img class="big-head" src="./asssets/img/big-head.svg" alt="person head">
-                </span>
-            </div>
-            <div class="edit-contact-bottom">
-                <form action="">
-                    <div class="input-field-top">
-                        <input class="name-input" type="name" required placeholder="Name">
-                        <img src="./asssets/img/name-head.svg" alt="name icon">
-                    </div>
-                    <div class="input-field">
-                        <input class="email-input" type="email" placeholder="Email">
-                        <img src="./asssets/img/email-icon.svg" alt="email icon">
-                    </div>
-                    <div class="input-field">
-                        <input class="tel-input" type="tel" placeholder="Phone">
-                        <img src="./asssets/img/tel.svg" alt="name icon">
-                    </div>
-                </form>
-                <div class="create-contact-container">
-                    <div class="create-contact">
-                        <div class="create-contact-text white">Create contact</div>
-                        <img class="check-white" src="./asssets/img/check-white.svg" alt="check">
-                    </div>
-                </div>
-            </div>
-        </div> -->
     </div>
-
 </body>
 
 </html>
