--- a/contacts.html
+++ b/contacts.html
@@ -18,9 +18,11 @@
 <body onload="init()">
     <div w3-header-include-html="/asssets/templates/header.html"></div>
     <div class="new-contact-frame">
-        <div class="new-contact-container">
-            <span>New Contact</span>
-            <img src="./asssets/img/new-contact.svg" alt="New Contact">
+        <div class="new-contact-container-frame">
+            <div class="new-contact-container">
+                <span>New Contact</span>
+                <img src="./asssets/img/new-contact.svg" alt="New Contact">
+            </div>
         </div>
         <div class="contact-frame">
             <div class="letter-frame">
@@ -76,10 +78,12 @@
             </div>
         </div>
     </div>
-    <div class="add-contact">
+    <div class="add-contact d-none">
         <div class="edit-contact-frame">
             <div class="edit-contact-head">
-                <img class="close-x" src="./asssets/img/close-x.svg" alt="close x-icon">
+                <div class="x-container">
+                    <img class="close-x" src="./asssets/img/close-x.svg" alt="close x-icon">
+                </div>
                 <h1 class="white">Add Contact</h1>
                 <span class="tasks-are-better white">Tasks are better with a team</span>
                 <hr class="hr-blue-small-left">
