--- a/board.html
+++ b/board.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="/asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
     <link rel="stylesheet" href="/asssets/css/header.css">
     <link rel="stylesheet" href="/asssets/css/footer.css">
+    <script src="footer.js"></script>
     <title>Board</title>
 </head>
 <body onload="init()">
@@ -96,6 +97,5 @@
     </div>
     <footer w3-footer-include-html="/asssets/templates/footer.html"></footer>
     <script src="header_include.js"></script>
-    <script src="footer_includes.js"></script>
 </body>
 </html>
