--- a/help.html
+++ b/help.html
@@ -10,14 +10,13 @@
     <link rel="stylesheet" href="/asssets/css/header.css">
     <link rel="shortcut icon" href="/asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
     <link rel="stylesheet" href="/asssets/css/footer.css">
+    <script src="footer.js"></script>
   </head>
 
   <body onload="init()">
     <div w3-header-include-html="/asssets/templates/header.html"></div>
-    <header>
-      <img class="small-logo" src="./help_img/small-logo.svg" alt="Logo" />
+
       <button id="create-button">Create &#10003;</button>
-    </header>
 
     <div class="wrapper">
       <p>Kanban Project Management Tool</p>
