--- a/summary.html
+++ b/summary.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/asssets/css/header.css">
     <link rel="shortcut icon" href="/asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
     <link rel="stylesheet" href="/asssets/css/footer.css">
+    <script src="footer.js"></script>
     <title>Summary</title>
 </head>
 <body onload="init()">
