--- a/add_task.html
+++ b/add_task.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="/asssets/css/header.css">
   <link rel="shortcut icon" href="/asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
   <link rel="stylesheet" href="/asssets/css/footer.css">
+  <script src="footer.js"></script>
 </head>
 
 <body onload="init()">
