--- a/contacts.html
+++ b/contacts.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/asssets/css/header.css">
     <link rel="shortcut icon" href="/asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
     <link rel="stylesheet" href="/asssets/css/footer.css">
+    <script src="footer.js"></script>
 </head>
 
 <body onload="init()">
@@ -113,7 +114,6 @@
     </div>
     <footer w3-footer-include-html="/asssets/templates/footer.html"></footer>
     <script src="header_include.js"></script>
-    <script src="footer_includes.js"></script>
 </body>
 
 </html>
