--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="wrong-password">Wrong password</div>
-                <a class="forgot" href="#">Forgot my Password</a>
+                <a onclick="forgotPassword()" class="forgot" href="#">Forgot my Password</a>
                 <div id="checkbox-container" class="checkbox-container">
                     <div id="checkmark-container">
                         <img class="checkbox-empty" onclick="checkmarkChecked()" src="/asssets/img/checkmark_container.svg"alt="">
@@ -50,12 +50,12 @@
                 </div>
             </form>
             <div class="guest-btn-container">
-                <button class="guest-btn">Guest Log in</button>
+                <a href="guest_hello.html"><button class="guest-btn">Guest Log in</button></a>
             </div>
         </div>
     </div>
     <div class="outer-container">
-        <div class="sign-up-container">
+        <div id="sign-up-container" class="sign-up-container">
             <span>Not a Join user?</span>
             <div>
                 <button onclick="signIn()">Sign up</button>
