--- a/add_task.html
+++ b/add_task.html
@@ -9,6 +9,7 @@
   <link rel="shortcut icon" href="/asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
   <link rel="stylesheet" href="/asssets/css/footer.css">
   <script src="footer.js"></script>
+  <link rel="stylesheet" href="asssets/css/add_task.css">
 </head>
 
 <body onload="init()">
