--- a/single-contact.html
+++ b/single-contact.html
@@ -17,7 +17,7 @@
 </head>
 
 <body onload="init()">
-    <header w3-header-include-html="/asssets/templates/header.html"></header>
+    <div w3-header-include-html="/asssets/templates/header.html"></div>
     <div class="content-big-contact">
         <div class="big-contact-frame">
             <div class="big-contact-frame-header">
