problem with contacts

--- a/single-contact.html
+++ b/single-contact.html
@@ -8,7 +8,6 @@
     <title>Single Contact</title>
     <link rel="stylesheet" href="./asssets/css/style.css">
     <link rel="stylesheet" href="./asssets/css/contacts.css">
-    <script src="script.js"></script>
     <script src="./js/storage.js"></script>
     <link rel="icon" type="image/x-icon" href="./asssets/img/mobile-login-logo-dark.svg">
     <link rel="stylesheet" href="/asssets/css/header.css">
@@ -17,11 +16,11 @@
 </head>
 
 <body onload="init()">
-    <header w3-header-include-html="/asssets/templates/header.html"></header>
-    <div class="content-big-contact">
+    <div w3-header-include-html="/asssets/templates/header.html"></div>
+     <div class="content-big-contact">
         <div class="big-contact-frame">
             <div class="big-contact-frame-header">
-                <span class="kanban-pmt">Kanban Project Management Tool</span>
+                <h3 class="kpmt">Kanban Project Management Tool</h3>
                 <a href="./contacts.html" class="h1-back-arrow">
                     <h1>Contacts</h1>
                     <img class="back-arrow" src="./asssets/img/arrow-left-line.svg" alt="back arrow">
@@ -90,11 +89,8 @@
         </div>
     </div>
     </div>
-<<<<<<< HEAD
     <footer w3-footer-include-html="/asssets/templates/footer.html"></footer>
     <script src="header_include.js"></script>
-=======
->>>>>>> c780ee641e384ac87bf686907dcca095064e22bf
 </body>
 
 </html> 
