--- a/contacts.html
+++ b/contacts.html
@@ -8,6 +8,7 @@
     <title>Contacts</title>
     <link rel="stylesheet" href="./asssets/css/style.css">
     <link rel="stylesheet" href="./asssets/css/contacts.css">
+    <link rel="stylesheet" href="./asssets/css/contact_media.css">
     <script src="./js/storage.js"></script>
     <link rel="stylesheet" href="/asssets/css/header.css">
     <link rel="shortcut icon" href="/asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
@@ -80,7 +81,7 @@
     </div>
     <div class="add-contact d-none">
         <div class="edit-contact-frame">
-            <div class="edit-contact-head">
+            <div class="edit-contact-head"> 
                 <div class="x-container">
                     <img class="close-x" src="./asssets/img/close-x.svg" alt="close x-icon">
                 </div>
