--- a/single-contact.html
+++ b/single-contact.html
@@ -8,11 +8,12 @@
     <title>Single Contact</title>
     <link rel="stylesheet" href="./asssets/css/style.css">
     <link rel="stylesheet" href="./asssets/css/contacts.css">
-    <script src="./js/storage.js"></script>
+    <link rel="stylesheet" href="./asssets/css/contact_media.css">
     <link rel="icon" type="image/x-icon" href="./asssets/img/mobile-login-logo-dark.svg">
     <link rel="stylesheet" href="/asssets/css/header.css">
     <link rel="shortcut icon" href="/asssets/img/mobile-login-logo-dark.svg" type="image/x-icon">
     <link rel="stylesheet" href="/asssets/css/footer.css">
+    <script src="./js/storage.js"></script>
 </head>
 
 <body onload="init()">
