add burger menu

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
             </form>
             <div class="guest-btn-container">
-                <a href="guest_hello.html"><button class="guest-btn">Guest Log in</button></a>
+                <a href="guest_hello.html"><button onclick="guestLogin()" class="guest-btn">Guest Log in</button></a>
             </div>
         </div>
     </div>
