--- a/contacts.html
+++ b/contacts.html
@@ -30,7 +30,7 @@
             <div class="contact-frame">
                 <div class="letter-frame">
                     <h2>A</h2>
-                    <hr>
+                    <hr class="standard-hr">
                     <a href="./single-contact.html" class="single-contact-frame">
                         <span class="contact-logo orange">AM</span>
                         <div class="name-and-email">
@@ -48,7 +48,7 @@
                 </div>
                 <div class="letter-frame">
                     <h2>B</h2>
-                    <hr>
+                    <hr class="standard-hr">
                     <div class="single-contact-frame">
                         <span class="contact-logo light-blue">BZ</span>
                         <div class="name-and-email">
@@ -59,7 +59,7 @@
                 </div>
                 <div class="letter-frame">
                     <h2>D</h2>
-                    <hr>
+                    <hr class="standard-hr">
                     <div class="single-contact-frame">
                         <span class="contact-logo pink">DE</span>
                         <div class="name-and-email">
@@ -70,7 +70,7 @@
                 </div>
                 <div class="letter-frame">
                     <h2>E</h2>
-                    <hr>
+                    <hr class="standard-hr">
                     <div class="single-contact-frame">
                         <span class="contact-logo green">EF</span>
                         <div class="name-and-email">
@@ -81,7 +81,7 @@
                 </div>
             </div>
         </div>
-        <div class="content-big-contact">
+        <div class="content-big-contact d-none">
             <div class="big-contact-frame">
                 <div class="big-contact-frame-header">
                     <h3 class="kpmt">Kanban Project Management Tool</h3>
@@ -131,19 +131,21 @@
             </div>
         </div>
     </div>
-    <div class="edit-contact d-none">
+    <div class="edit-contact ">
         <div class="edit-contact-frame">
             <div class="edit-contact-head">
                 <div class="x-container">
                     <img class="close-x" src="./asssets/img/close-x.svg" alt="close x-icon">
                 </div>
+                <img class="join-logo-white d-none" src="./asssets/img/join-logo-white.svg" alt="Join logo">
                 <h1 class="white">Edit Contact</h1>
-                <hr class="hr-blue-small-left">
+                <hr id="hr-blue-small-left" class="hr-blue-small-left">
 
             </div>
             <div class="edit-contact-bottom">
                 <span class="contact-logo-bigger light-orange">TW</span>
                 <form action="">
+                    <img class="close-x-dark" src="./asssets/img/close-x-dark.svg" alt="close x">
                     <div class="input-field-top">
                         <textarea class="name-displayed" name="name" id="name-displayed" cols="50"
                             rows="10">Tatjana Wolf</textarea>
@@ -157,16 +159,17 @@
                         <img src="./asssets/img/email-icon.svg" alt="email icon">
                     </div>
                     <div class="input-field">
-                        <textarea class="phone-displayed" name="name" id="phone-deisplayed" cols="50"
+                        <textarea class="phone-displayed" name="name" id="phone-displayed" cols="50"
                             rows="10">+49 2222 222 22 2</textarea>
                         <input class="tel-input d-none" type="tel" placeholder="Phone">
                         <img src="./asssets/img/tel.svg" alt="name icon">
                     </div>
+                    <div class="delete-save">
+                        <div class="delete">Delete</div>
+                        <div class="save">Save</div>
+                    </div>
                 </form>
-                <div class="delete-save">
-                    <div class="delete">Delete</div>
-                    <div class="save">Save</div>
-                </div>
+                
             </div>
         </div>
     </div>
